# champ

./: &.md  .gitignore  .rubocop.yml  Cargo.toml  README.md  _.amp  _amp.md  _tree.md  amp.md  build.zig  build.zig.zon  changelog.naft  cleanup.md  cli.md  features.md  gui.md  improv.md  inbox.md  pm.md  pr.md  qc.md  rakefile.rb  rakefile.rb_  readme.md  recipes.chai  todo.md  xmake.lua
amp/: Config.md  create Test content.md  optimize Tree traversal.md  uc1.md  uc2.md  ucs.md
amp/amp/: Description.md
amp/ch/: Description.md
amp/champ/: Description.md
amp/md/: parse Markdown into tree.Tree.md
cli/src/: main.cpp
doc/: amp.md  concept.md  priority.md  process.md  requirements.md  wbs.md
src/: ReturnCode.hpp  amp.rs  amp.zig  answer.rs  app.rs  app.zig  cfg.zig  cfg_.zig  chore.zig  chorex.zig  cli.rs  cli.zig  config.rs  config.zig  ctrl.rs  data.rs  date.zig  datex.zig  filex.zig  fs.rs  ignore.rs  lex.rs  lib.rs  lsp.zig  main.rs  main.zig  markdown.zig  mero.zig  my.rs  path.rs  qry.zig  query.rs  rnd.rs  root.zig  rubr.zig  strange.rs  tkn.zig  tree.rs  tui.rs  util.rs
src/amp/: Date.zig  Def.zig  DefMgr.zig  Language.hpp  Level.zig  Meta.zig  Parser.cpp  Parser.hpp  Path.zig  Prio.zig  Scanner.cpp  Scanner.hpp  Status.zig  Wbs.zig  parse.rs  parse.zig  tkn.zig  value.rs
src/app/: check.zig  export.zig  lsp.zig  perf.zig  plan.zig  search.zig  test.zig  wbs.zig
src/cfg/: cli.zig  file.zig
src/cli/: App.cpp  App.hpp  Config.cpp  Config.hpp  Grove.hpp  Options.cpp  Options.hpp  ReturnCode.hpp  main.cpp  main.zig  show.rs
src/data/: Boss.cpp  Boss.hpp  index.rs  list.rs  name.rs  node.rs  path.rs  status.rs  tree.rs
src/iact/: Boss.cpp  Boss.hpp
src/lsp/: dto.zig
src/mero/: File.cpp  File.hpp  Language.cpp  Language.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  Parser.zig  dto.zig  forest.zig  (+1 more)
test/: simple.md
(+43 files in other folders)
