[package]
name = "champetter"
version = "0.1.0"
edition = "2021"
authors = ["Geert Fannes <geert.fannes@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "champ"
path = "src/main.rs"

[[bin]]
name = "ch"
path = "src/bin/ch.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.25.0"
dirs = "5.0.1"
flexi_logger = "0.28.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
unicode-width = "0.1.10"
