[package]
name = "champ"
version = "0.1.0"
edition = "2021"
authors = ["Geert Fannes <geert.fannes@gmail.com>"]
description = "Command-line Hero for the Ampersand Metadata Protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "champ"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.25.0"
dirs = "5.0.1"
flexi_logger = "0.28.1"
ignore = "0.4.22"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-width = "0.1.10"

[profile.release-with-debug]
inherits = "release"
debug = true
